syntax = "proto3";

package umrs.messaging.push;

option go_package="push";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

message PushMessage {
    repeated string device_tokens = 2;
    string title = 1;
    string message = 3;
    map<string, string> details = 4;
}

service PushMessaging {
    rpc SendPushMessage (PushMessage) returns (google.protobuf.Empty);
}